--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,7 +45,6 @@ body {
     transform-origin: bottom left;
 
 }
-
 #login_button {
     width: fit-content;
     height: fit-content;
@@ -78,7 +77,7 @@ body {
     background-color: rgba(255, 255, 255, 1);
     backdrop-filter: blur(5px);
     border-radius: 10px;
-
+    
 }
 
 
@@ -93,5 +92,6 @@ body {
 
 #row_container img{
     border-radius: 100%;
-    
+    width: 235px;
+    height: 351px;
 }
