--- a/public/css/style.css
+++ b/public/css/style.css
@@ -98,3 +98,493 @@ body {
     width: 236px;
     height: 341px;
 }
+
+
+
+:root {
+    --white-purple-color: #F3F3FD;
+    --white-color: #FFFFFF;
+    --blue-color: #4461F2;
+    --dark-blue-color: #023047;
+    --black-purple: #361C7A;
+    --orange-color: #FF7517;
+    --dark-color: #000000;
+}
+
+*
+*::after
+*::before {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    font-family: "Poppins", sans-serif;
+}
+
+.wrapper {
+    max-width: 1728px;
+    margin: 0 auto;
+}
+
+.btn {
+    padding: 11px 9px;
+    border-radius: 17.0492px;
+    color: #FFFFFF;
+    display: inline-block;
+    font-weight: 800;
+    font-size: 24px;
+    text-decoration: none;
+}
+
+.btn.dark {
+    font-family: 'Raleway', sans-serif;
+    background: var(--dark-blue-color);
+}
+
+.btn.light {
+    font-family: 'Raleway', sans-serif;
+    background: var(--orange-color);
+}
+
+.orange {
+    color: var(--orange-color);
+}
+
+.blue {
+    color: var(--blue-color);
+}
+
+/* Header */
+
+header {
+    background: linear-gradient(180deg, #5C6DFF 0%, #5061FF 49.48%, #000E89 100%);
+    height: 100vh;
+    width: 100%;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    width: 1728px;
+    top: 0;
+    padding: 36px 0;
+    z-index: 100;
+    transition: all 500ms ease;
+}
+
+nav.scrolled {
+    background: var(--dark-color);
+    box-shadow: 0 16px 14px -8px rgba(0, 0, 0, 0.3);
+    border-radius: 0 0 8px 8px;
+    top: 0;
+    padding: 12px;
+}
+
+nav .logo {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 36px;
+    color: #FFFFFF;
+}
+
+nav ul {
+    display: flex;
+    align-items: center;
+    gap: 60px;
+    list-style: none;
+    margin: 0px;
+}
+
+nav ul li a {
+    font-family: "Poppins", sans-serif;
+    font-weight: bold;
+    font-size: 22px;
+    display: flex;
+
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+
+/* Hero section */
+
+.hero-section {
+    display: flex;
+    height: 100vh;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 0px;
+}
+
+.hero-section .left h1 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 125%;
+    color: #FFFFFF;
+    margin-bottom: 0;
+}
+
+.hero-section .left p {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 43px;
+    color: #DDDDDD;
+    margin-bottom: 30px;
+    margin-left: 30px;
+    
+}
+
+.hero-section .left a{
+    margin-top: 100px;
+    margin-left: 20px;
+}
+
+.hero-section .left {
+    flex: 1;
+    margin-left: 75px;
+}
+
+.hero-section .right {
+    align-self: flex-end;
+}
+
+.hero-section .right img {
+    height: 800px;
+    margin-right: 110px;
+}
+
+/* Achievement cards */
+
+.achievement-card {
+    position: absolute;
+}
+
+.achievement-card .content {
+    border-radius: 24px;
+    background: #FFFFFF;
+    padding: 8px 32px;
+    z-index: 10;
+    position: relative;
+}
+
+.achievement-card {
+    left: 49%;
+    top: 228px;
+}
+
+.achievement-card h3{
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    font-size: 36px;
+    color: var(--dark-blue-color);
+    margin: 0;
+    text-align: center;
+    width: 100%;
+}
+
+.achievement-card p {
+    font-family: 'Poppins', sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+    color: var(--dark-blue-color);
+    margin-top: 4px;
+    margin-bottom: 8px;
+    text-align: center;
+}
+
+.achievement-card .bg {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(180deg, #6f7dfb 0%, #3b448f 100%);
+    border-radius: 24px;
+    top: 8px;
+    left: 8px;
+    z-index: 1;
+}
+
+/* Section */
+
+section {
+    margin-top: 100px;
+}
+
+section h1 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 800;
+    font-size: 40px;
+    line-height: 54px;
+    margin: 0;
+    color: var(--blue-color);
+}
+
+section h3 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    font-size: 34px;
+    line-height: 40px;
+    color: var(--dark-blue-color);
+    margin: 12px 0;
+}
+
+/* Testimonials section */
+
+.testimonials-section {
+    text-align: center;
+    align-items: center;
+}
+
+.testimonials-section .up {
+    display: flex;
+    gap: 20px;
+    margin-left: 600px;
+}
+
+.testimonials-section .down {
+    display: flex;
+    gap: 100px;
+    margin-left: 150px;
+}
+
+.testimonials-section .testimonial-card {
+    width: 408px;
+    background: #ffffff;
+    box-shadow: 0px 9px 36px rgba(0, 0, 0, 0.2);
+    border-radius: 60px;
+    margin-top: 86px;
+}
+
+.testimonials-section .testimonial-card img {
+    margin-top: 20px;
+    height: 120px;
+}
+
+.testimonials-section .testimonial-card .content h3 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 35px;
+    line-height: 40px;
+    color: #000000;
+}
+
+.testimonials-section .testimonial-card .info p {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 44px;
+    color: #8A8585;
+    margin-top: 20px;
+}
+
+/* News section */
+
+.ups {
+    display: flex;
+    margin-left: -5px;
+    gap: 1270px;
+    margin-bottom: 15px;
+}
+
+.ups h1 {
+    width: 320px;
+}
+
+.ups h2 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 43px;
+    color: #000000;
+}
+
+.news .article {
+    display: flex;
+    width: 1700px;
+    background: #ffffff;
+    box-shadow: 5px 5px 5px rgba(0.2, 0.2, 0.2, 0.2);
+    border-radius: 20px;
+    margin-top: 20px;
+}
+
+.news .article .inf {
+    margin-left: 20px;
+    width: 1200px;
+}
+
+.news .article .inf a {
+    text-decoration: none;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 40px;
+    color: #000000;
+}
+
+.news .article .inf p {
+    font-family: 'Poppins', sans-serif;
+    font-weight: normal;
+    font-size: 24px;
+    margin-left: 20px;
+    margin-top: -2px;
+    color: #464646;
+}
+
+.news .article img {
+    margin-left: 100px;
+    height: 250px;
+    width: 400px;
+}
+
+/* Patient section */
+
+.patients {
+    display: flex;
+    gap: 50px;
+}
+
+.patient {
+    background: #ffffff;
+    box-shadow: 5px 5px 5px rgba(0.2, 0.2, 0.2, 0.2);
+    border-radius: 42.65px;
+}
+
+.patients h3 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 34px;
+    line-height: 40px;
+    text-align: center;
+    color: #000000;
+}
+
+.patients p {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 44px;
+    text-align: center;
+    color: #8A8585;
+}
+
+.patients a {
+    text-decoration: none;
+}
+
+/* Care section */
+
+.cares {
+    display: flex;
+    gap: 50px;
+}
+
+.care {
+    background: #ffffff;
+    box-shadow: 5px 5px 5px rgba(0.2, 0.2, 0.2, 0.2);
+    border-radius: 42.65px;
+}
+
+.cares h3 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 34px;
+    line-height: 40px;
+    text-align: center;
+    color: #000000;
+}
+
+.cares p {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 44px;
+    text-align: center;
+    color: #8A8585;
+}
+
+.cares a {
+    text-decoration: none;
+}
+
+/* Footer */
+
+footer {
+    background: var(--dark-color);
+    color: #FFFFFF;
+    margin-top: 100px;
+    padding: 70px 0;
+}
+
+footer a {
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+footer h3 {
+    color: var(--orange-color);
+}
+
+footer ul {
+    list-style: none;
+    padding-left: 20px;
+}
+
+footer ul li {
+    margin: 16px 0;
+}
+
+footer .links-container {
+    display: grid;
+    grid-template-columns: 2fr 2fr 3fr;
+    gap: 90px;
+}
+
+footer .social img{
+    margin-left: 20px;
+    height: 20px;
+}
+
+footer form {
+    margin-left: 20px;
+    margin-top: 16px;
+    position: relative;
+}
+
+footer form input {
+    font-family: 'Poppins', sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 200%;
+    border-radius: 8px;
+    padding: 8px 32px;
+    border: none;
+    width: 90.1%;
+    color: var(--dark-color);
+}
+
+footer form .submit-btn {
+    position: absolute;
+    right: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: var(--dark-blue-color);
+    border-radius: 8px;
+    padding: 8px 32px;
+    border: none;
+
+    font-family: 'Poppins', sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+    color: #FFFFFF;
+
+    cursor: pointer;
+}
+
+footer .copyright {
+    margin-top: 100px;
+}
