--- a/public/news.css
+++ b/public/news.css
@@ -286,3 +286,210 @@ footer form .submit-btn {
 footer .copyright {
     margin-top: 100px;
 }
+
+
+/* Login */
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 101;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    padding-top: 130px;
+}
+  
+.modal-content {
+    background-color: #fefefe;
+    margin: 5px auto;
+    border-radius: 8px;
+    width: 20%;
+    height: 53%;
+}
+
+.modal-content a {
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 150%;
+    color: var(--dark-blue-color);
+}
+
+.modal-content .popup {
+    padding-top: 16px;
+    margin-left: 30px;
+}
+
+.modal-content .container {
+    margin-top: 24px;
+    text-align: center;
+}
+
+.modal-content .container .l3 {
+    display: flex;
+    gap: 78px;
+}
+
+.modal-content .container .type input{
+    font-family: 'Poppins', sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 200%;
+    border-radius: 8px;
+    padding: 8px 32px;
+    width: 70%;
+    margin-left: -30px;
+    color: var(--dark-color);
+}
+
+.gmail {
+    margin-bottom: 7px;
+}
+
+.type {
+    margin-bottom: 16px;
+}
+
+.modal-content .container button {
+    margin-top: 30px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 150%;
+    border-radius: 8px;
+    padding: 8px 32px;
+    width: 80%;
+    margin-left: -30px;
+    color: var(--white-color);
+    background-color: var(--blue-color);
+}
+
+.modal-content ul li {
+    margin-top: -20px;
+}
+
+.modal-content ul {
+    display:block;
+    list-style:circle;
+    margin-top: -25px;
+    margin-bottom: 13px;
+}
+
+.modal-content h1 {
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 800;
+    font-size: 40px;
+    line-height: 54px;
+    margin: 0;
+    color: var(--blue-color);
+}
+
+.close {
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: red;
+    cursor: pointer;
+}
+
+/* Add Zoom Animation */
+.animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+    from {-webkit-transform: scale(0)}
+    to {-webkit-transform: scale(1)}
+}
+
+@keyframes animatezoom {
+    from {transform: scale(0)}
+    to {transform: scale(1)}
+}
+
+/* contact */
+
+.ver2 .social {
+    display: flex;
+}
+
+.ver2 .regis {
+    margin-top: 40px;
+}
+
+.ver2 {
+    background-color: #fefefe;
+    margin: 5px auto;
+    border-radius: 8px;
+    width: 26%;
+    height: 31%;
+}
+
+.modal-content .popup2 {
+    padding-top: 16px;
+    margin-left: 30px;
+}
+
+.popup2 h3 {
+    color: var(--orange-color);
+}
+
+.popup2 ul {
+    list-style: none;
+    padding-left: 20px;
+}
+
+.popup2 ul li {
+    margin: 16px 0;
+}
+
+.popup2 .social img{
+    margin-left: 20px;
+    height: 20px;
+    margin-bottom: 13px;
+}
+
+.ver22 {
+    display: none;
+    position: fixed;
+    z-index: 101;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    padding-top: 30px;
+}
+
+.btn.none {
+    font-family: "Poppins", sans-serif;
+    font-weight: bold;
+    font-size: 22px;
+    display: flex;
+
+    color: #FFFFFF;
+    background:none;
+    text-decoration: none;
+}
+
+button {
+    border: none;
+    cursor: pointer;
+}
