--- a/public/style.css
+++ b/public/style.css
@@ -1,106 +1,3 @@
-body {
-    background: rgba(243, 243, 252, 1);
-}
-
-.navbar-nav{
-    margin-left: 20%;
-}
-
-.navbar-nav>li {
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
-.nav-item {
-    display: inline-block;
-    position: relative;
-}
-
-.nav-link {
-    color: rgba(64, 64, 64, 1);
-    font-family: Open Sans;
-    font-weight: Regular;
-    font-size: 20px;
-}
-
-.nav-link:hover {
-    color: rgba(68, 97, 242, 1);
-}
-
-.nav-item[target="nav-item"]:after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    transform: scaleX(0);
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: rgba(68, 97, 242, 1);
-    transform-origin: bottom right;
-    transition: transform 0.25s ease-out;
-}
-
-.nav-item[target="nav-item"]:hover:after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
-
-}
-#maungu{
-    color: white;
-}
-#login_button {
-    width: fit-content;
-    height: fit-content;
-    background: linear-gradient(109.6deg, rgb(78, 62, 255) 11.2%, rgb(164, 69, 255) 91.1%);
-    opacity: 1;
-    border-top-left-radius: 17px;
-    border-top-right-radius: 17px;
-    border-bottom-left-radius: 17px;
-    border-bottom-right-radius: 17px;
-    overflow: hidden;
-}
-
-#login {
-    color: rgb(255, 255, 255);
-    font-family: Open Sans;
-    font-weight: ExtraBold;
-    font-size: large;
-    opacity: 1;
-    text-align: left;
-}
-
-#row_container {
-    margin-left: 7%;
-    color: #4461F2;
-    font-family: Inter;
-    font-weight: Bold;
-}
-
-#row_container .container[target="find_patient"] {
-    background-color: rgba(255, 255, 255, 1);
-    backdrop-filter: blur(5px);
-    border-radius: 10px;
-    
-}
-
-
-
-#row_container button{
-    display: block;
-    margin-bottom: 20%;
-    width: max-content;
-    background: linear-gradient(109.6deg, rgb(78, 62, 255) 11.2%, rgb(164, 69, 255) 91.1%);
-    color: white;
-}
-
-#row_container img{
-    border-radius: 100%;
-    width: 236px;
-    height: 341px;
-}
-
-
-
 :root {
     --white-purple-color: #F3F3FD;
     --white-color: #FFFFFF;
@@ -587,4 +484,210 @@ footer form .submit-btn {
 
 footer .copyright {
     margin-top: 100px;
+}
+
+/* Login */
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 101;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    padding-top: 130px;
+}
+  
+.modal-content {
+    background-color: #fefefe;
+    margin: 5px auto;
+    border-radius: 8px;
+    width: 20%;
+    height: 53%;
+}
+
+.modal-content a {
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 150%;
+    color: var(--dark-blue-color);
+}
+
+.modal-content .popup {
+    padding-top: 16px;
+    margin-left: 30px;
+}
+
+.modal-content .container {
+    margin-top: 24px;
+    text-align: center;
+}
+
+.modal-content .container .l3 {
+    display: flex;
+    gap: 78px;
+}
+
+.modal-content .container .type input{
+    font-family: 'Poppins', sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 200%;
+    border-radius: 8px;
+    padding: 8px 32px;
+    width: 70%;
+    margin-left: -30px;
+    color: var(--dark-color);
+}
+
+.gmail {
+    margin-bottom: 7px;
+}
+
+.type {
+    margin-bottom: 16px;
+}
+
+.modal-content .container button {
+    margin-top: 30px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 150%;
+    border-radius: 8px;
+    padding: 8px 32px;
+    width: 80%;
+    margin-left: -30px;
+    color: var(--white-color);
+    background-color: var(--blue-color);
+}
+
+.modal-content ul li {
+    margin-top: -20px;
+}
+
+.modal-content ul {
+    display:block;
+    list-style:circle;
+    margin-top: -25px;
+    margin-bottom: 13px;
+}
+
+.modal-content h1 {
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 800;
+    font-size: 40px;
+    line-height: 54px;
+    margin: 0;
+    color: var(--blue-color);
+}
+
+.close {
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: red;
+    cursor: pointer;
+}
+
+/* Add Zoom Animation */
+.animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+    from {-webkit-transform: scale(0)}
+    to {-webkit-transform: scale(1)}
+}
+
+@keyframes animatezoom {
+    from {transform: scale(0)}
+    to {transform: scale(1)}
+}
+
+/* contact */
+
+.ver2 .social {
+    display: flex;
+}
+
+.ver2 .regis {
+    margin-top: 40px;
+}
+
+.ver2 {
+    background-color: #fefefe;
+    margin: 5px auto;
+    border-radius: 8px;
+    width: 26%;
+    height: 31%;
+}
+
+.modal-content .popup2 {
+    padding-top: 16px;
+    margin-left: 30px;
+}
+
+.popup2 h3 {
+    color: var(--orange-color);
+}
+
+.popup2 ul {
+    list-style: none;
+    padding-left: 20px;
+}
+
+.popup2 ul li {
+    margin: 16px 0;
+}
+
+.popup2 .social img{
+    margin-left: 20px;
+    height: 20px;
+    margin-bottom: 13px;
+}
+
+.ver22 {
+    display: none;
+    position: fixed;
+    z-index: 101;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    padding-top: 30px;
+}
+
+.btn.none {
+    font-family: "Poppins", sans-serif;
+    font-weight: bold;
+    font-size: 22px;
+    display: flex;
+
+    color: #FFFFFF;
+    background:none;
+    text-decoration: none;
+}
+
+button {
+    border: none;
+    cursor: pointer;
 }
