--- a/public/info.css
+++ b/public/info.css
@@ -56,7 +56,7 @@ body {
 
 header {
     background: linear-gradient(180deg, #5C6DFF 0%, #5061FF 49.48%, #000E89 100%);
-    height: 100vh;
+    height: 13vh;
     width: 100%;
 }
 
@@ -87,6 +87,10 @@ nav .logo {
     color: #FFFFFF;
 }
 
+nav a {
+    text-decoration: none;
+}
+
 nav ul {
     display: flex;
     align-items: center;
@@ -105,118 +109,16 @@ nav ul li a {
     text-decoration: none;
 }
 
-nav a {
-    text-decoration: none;
-}
+/* search section */
 
-
-/* Hero section */
-
-.hero-section {
+.ups {
+    margin-top: 40px;
+    margin-left: 70px;
     display: flex;
-    height: 100vh;
-    width: 100%;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 0px;
+    gap: 30px;
 }
 
-.hero-section .left h1 {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 45px;
-    line-height: 125%;
-    color: #FFFFFF;
-    margin-bottom: 0;
-}
-
-.hero-section .left p {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    font-size: 28px;
-    line-height: 43px;
-    color: #DDDDDD;
-    margin-bottom: 30px;
-    margin-left: 30px;
-    
-}
-
-.hero-section .left a{
-    margin-top: 100px;
-    margin-left: 20px;
-}
-
-.hero-section .left {
-    flex: 1;
-    margin-left: 75px;
-}
-
-.hero-section .right {
-    align-self: flex-end;
-}
-
-.hero-section .right img {
-    height: 800px;
-    margin-right: 110px;
-}
-
-/* Achievement cards */
-
-.achievement-card {
-    position: absolute;
-}
-
-.achievement-card .content {
-    border-radius: 24px;
-    background: #FFFFFF;
-    padding: 8px 32px;
-    z-index: 10;
-    position: relative;
-}
-
-.achievement-card {
-    left: 49%;
-    top: 228px;
-}
-
-.achievement-card h3{
-    font-family: 'Poppins', sans-serif;
-    font-weight: bold;
-    font-size: 36px;
-    color: var(--dark-blue-color);
-    margin: 0;
-    text-align: center;
-    width: 100%;
-}
-
-.achievement-card p {
-    font-family: 'Poppins', sans-serif;
-    font-weight: normal;
-    font-size: 16px;
-    color: var(--dark-blue-color);
-    margin-top: 4px;
-    margin-bottom: 8px;
-    text-align: center;
-}
-
-.achievement-card .bg {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background: linear-gradient(180deg, #6f7dfb 0%, #3b448f 100%);
-    border-radius: 24px;
-    top: 8px;
-    left: 8px;
-    z-index: 1;
-}
-
-/* Section */
-
-section {
-    margin-top: 100px;
-}
-
-section h1 {
+.ups h1 {
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
     font-size: 40px;
@@ -224,192 +126,76 @@ section h1 {
     margin: 0;
     color: var(--blue-color);
 }
+/* news section */
 
-section h3 {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    font-size: 34px;
-    line-height: 40px;
-    color: var(--dark-blue-color);
-    margin: 12px 0;
+.in4 .articles {
+    margin-top: 40px;
+    margin-left: 30px;
 }
 
-/* Testimonials section */
-
-.testimonials-section {
-    text-align: center;
-    align-items: center;
-}
-
-.testimonials-section .up {
-    display: flex;
-    gap: 20px;
-    margin-left: 600px;
-}
-
-.testimonials-section .down {
-    display: flex;
-    gap: 100px;
-    margin-left: 150px;
-}
-
-.testimonials-section .testimonial-card {
-    width: 408px;
-    background: #ffffff;
-    box-shadow: 0px 9px 36px rgba(0, 0, 0, 0.2);
-    border-radius: 60px;
-    margin-top: 86px;
-}
-
-.testimonials-section .testimonial-card img {
-    margin-top: 20px;
-    height: 120px;
-}
-
-.testimonials-section .testimonial-card .content h3 {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 35px;
-    line-height: 40px;
-    color: #000000;
-}
-
-.testimonials-section .testimonial-card .info p {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-    font-size: 28px;
-    line-height: 44px;
-    color: #8A8585;
-    margin-top: 20px;
-}
-
-/* News section */
-
-.ups {
-    display: flex;
-    margin-left: -5px;
-    gap: 1270px;
-    margin-bottom: 15px;
-}
-
-.ups h1 {
-    width: 320px;
-}
-
-.ups h2 {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    font-size: 30px;
-    line-height: 43px;
-    color: #000000;
-}
-
-.news .article {
-    display: flex;
-    width: 1700px;
-    background: #ffffff;
+.in4 .article {
+    width: 1600px;
+    background: #F3F3FD;
     box-shadow: 5px 5px 5px rgba(0.2, 0.2, 0.2, 0.2);
     border-radius: 20px;
-    margin-top: 20px;
+    margin-top: 24px;
+    padding-top: 1px;
+    padding-bottom: 10px;
+    padding-left: 5px;
 }
 
-.news .article .inf {
+.in4 .article .inf {
     margin-left: 20px;
-    width: 1200px;
+    width: 1570px;
 }
 
-.news .article .inf a {
-    text-decoration: none;
+.in4 h3 {
+    margin-top: 10px;
+    margin-bottom: -22px;
     font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 28px;
-    line-height: 40px;
-    color: #000000;
+    font-weight: bold;
+    font-size: 27px;
+    color: var(--dark-blue-color);
 }
 
-.news .article .inf p {
+.in4 p {
     font-family: 'Poppins', sans-serif;
     font-weight: normal;
-    font-size: 24px;
-    margin-left: 20px;
-    margin-top: -2px;
-    color: #464646;
+    font-size: 17px;
+    color: var(--dark-color);
 }
 
-.news .article img {
-    margin-left: 100px;
-    height: 250px;
-    width: 400px;
+.inf .heading {
+    margin-bottom: -20px;
 }
 
-/* Patient section */
-
-.patients {
-    display: flex;
-    gap: 50px;
-}
-
-.patient {
-    background: #ffffff;
-    box-shadow: 5px 5px 5px rgba(0.2, 0.2, 0.2, 0.2);
-    border-radius: 42.65px;
-}
-
-.patients h3 {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 34px;
-    line-height: 40px;
-    text-align: center;
-    color: #000000;
-}
-
-.patients p {
+.in4 h5 {
+    margin-top: 3px;
     font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 44px;
-    text-align: center;
-    color: #8A8585;
+    font-weight: bold;
+    font-size: 19px;
+    color: var(--dark-blue-color);
 }
 
-.patients a {
-    text-decoration: none;
-}
-
-/* Care section */
-
-.cares {
-    display: flex;
-    gap: 50px;
-}
-
-.care {
-    background: #ffffff;
-    box-shadow: 5px 5px 5px rgba(0.2, 0.2, 0.2, 0.2);
-    border-radius: 42.65px;
-}
-
-.cares h3 {
+.in4 h6 {
+    margin-top: 30px;
     font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 34px;
-    line-height: 40px;
-    text-align: center;
-    color: #000000;
+    font-weight: bold;
+    font-size: 18px;
+    color: var(--dark-blue-color);
 }
 
-.cares p {
+.in4 ul {
+    margin-top: -20px;
+    margin-bottom: -10px;
+}
+
+.in4 ul li {
     font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 44px;
-    text-align: center;
-    color: #8A8585;
-}
-
-.cares a {
-    text-decoration: none;
+    font-weight: normal;
+    font-size: 17px;
+    color: var(--dark-color);
+    margin-bottom: 15px;
 }
 
 /* Footer */
@@ -489,6 +275,7 @@ footer form .submit-btn {
 footer .copyright {
     margin-top: 100px;
 }
+
 
 /* Login */
 
@@ -694,4 +481,31 @@ footer .copyright {
 button {
     border: none;
     cursor: pointer;
+}
+
+/* collapsible btn */
+.collapsible {
+    background-color: var(--white-purple-color);
+    cursor: pointer;
+    width: 100%;
+    height: 10px;
+    text-align: left;
+}
+
+.collapsible:after {
+    content: '\002B';
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+}
+
+.active:after {
+    content: "\2212";
+}
+
+.content {
+    padding: 0 18px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s ease-out;
 }
